--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "config": "^4.1.1",
     "cookie-parser": "^1.4.7",
+    "debug": "^4.4.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
